[fe] Fix booklet visibility for monitor logins
Some things broke when merging...

--- a/frontend/src/app/app-root/starter/starter.component.scss
+++ b/frontend/src/app/app-root/starter/starter.component.scss
@@ -32,6 +32,12 @@
   gap: 24px;
 }
 
+:host ::ng-deep .mat-expansion-panel-body {
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+}
+
 .scroll-button {
   position: sticky;
   bottom: 24px;
